--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "eslint": "^8.4.1",
+    "eslint-config-hardcore": "^24.4.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^17.0.0-1",
     "eslint-plugin-nuxt": "^3.1.0",
