--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "eslint-plugin-promise": "^6.0.0",
     "foundation-sites": "^6.7.4",
     "jquery": "^3.6.0",
-    "motion-ui": "^2.0.3",
     "nuxt": "^2.15.8",
     "typescript": "^4.6.3",
     "vue": "^2.6.14",
@@ -43,8 +42,11 @@
     "eslint-config-standard": "^17.0.0-1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "motion-ui": "^2.0.3",
+    "node-sass": "^5.0.0",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
+    "sass-loader": "10.1.1",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.1.0",
